<resources>
    <string name="app_name">Shopping List</string>
    <string name="eggs">Eggs</string>
    <string name="rice">Rice</string>
    <string name="bread">Bread</string>
    <string name="cheese">Cheese</string>
    <string name="meat">Meat</string>
    <string name="crackers">Crackers</string>
    <string name="pickles">Pickles</string>
    <string name="milk">Milk</string>
    <string name="apples">Apples</string>
    <string name="coffee">Coffee</string>
    <string name="add_to_list">Add To List</string>
    <string name="find_grocery_store">Grocery Store Name</string>
    <string name="find_store">Find Store</string>
</resources>
